# jsondiffpatch.rs

./: .gitignore  Cargo.toml  README.md
crates/jsondiff_rs/: Cargo.toml  README.md
crates/jsondiff_rs/src/: lcs.rs  lib.rs
crates/jsonpatch_rs/: Cargo.toml  README.md
crates/jsonpatch_rs/tests/: patch_integration_test.rs
crates/jsonptr/: Cargo.toml
crates/jsonptr/src/: token.rs
crates/jsonptr_rs/: Cargo.toml  README.md
crates/jsonptr_rs/src/: operate_by_jsonptr.rs  pointer.rs
src/: lib.rs  main.rs  patch.rs
src/jsonptr/: mod.rs  operate_by_jsonptr.rs  pointer.rs  token.rs  value_mut_ref.rs
tests/: patch_integration_test.rs
