[package]
name = "json-diff-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "json_diff_patch"
path = "src/lib.rs"

[[bin]]
name = "json-diff-path-cli"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
console = "^0.15"
clap = { version = "^3.2.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

