[package]
name = "jsondiffpatch_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A command line tool to diff and patch JSON documents"
homepage = "https://github.com/Nero5023/jsondiffpatch.rs"
authors = ["Nero5023 <nero5023@gmail.com>", "WangZhuo2015 <zhuowangwork@gmail.com>"]
repository = "https://github.com/Nero5023/jsondiffpatch.rs"
documentation = "https://github.com/Nero5023/jsondiffpatch.rs"
readme = "README.md"
keywords = ["json", "diff", "patch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "jsondiffpath-cli"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
console = "^0.15"
clap = { version = "^3.2.16", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
jsonptr = { path= "crates/jsonptr_rs", package="jsonptr_rs" }
jsondiff = { path="crates/jsondiff_rs", package="jsondiff_rs" }
jsonpatch = { path="crates/jsonpatch_rs", package="jsonpatch_rs" }

[workspace]
members = [
    "crates/jsonptr_rs",
    "crates/jsondiff_rs",
    "crates/jsonpatch_rs"
]
