[package]
name = "jsondiff_rs"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/Nero5023/jsondiffpatch.rs"
authors = ["Nero5023 <nero5023@gmail.com>", "WangZhuo2015 <zhuowangwork@gmail.com>"]
repository = "https://github.com/Nero5023/jsondiffpatch.rs"
documentation = "https://github.com/Nero5023/jsondiffpatch.rs"
readme = "README.md"
keywords = ["json", "diff", "patch"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
